# pacific-climate-gap-atlas

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
analysis/: __init__.py
analysis/eda/: __init__.py  coverage.py  drivers.py  indicator_forensics.py  sensitivity.py  trends.py
analysis/evaluation/: __init__.py
analysis/features/: __init__.py  gap_index.py
analysis/io/: __init__.py  dataset_config.py  dataset_profile.py  official_data.py  sdmx.py
analysis/modeling/: __init__.py  (+1 more)
app/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
configs/: app_layers.yml  datasets.yml  eda.yml  gap_index.yml  indicator_pillars.yml  outlook.yml
context/: AGENTS.md  ANALYSIS_BACKLOG.md  ANALYSIS_BRIEF.md  ASSUMPTIONS.md  CLAUDE_MOCKUP_INSTRUCTIONS.md  CURSOR_RULES.md  DATAVIZ_INSPIRATION_AUDIT.md  DATA_CARD.md  DECISIONS.md  DESIGN_BRIEF.md  EXPERIMENTS.md  HANDOVER.md  INFORMATION_DIVERGENCE_PLAN.md  MODEL_CARD.md  PROBLEM.md  PROJECT.md  SCOPE.md  STORY_BRIEF.md  STRUCTURE.md  TASKS.md  WINNER_SCROLL_TOUR_AUDIT.md  development_rules.md  storyboardbrainstorm.md
research/: official_datasets_2026.csv  pacific_dataviz_2026_research_brief.md  past_entries_2022_2025.csv  past_winners_links.csv  winner_review_board.html
scripts/: build_app_data.py  build_gap_index.py  build_land_context.py  check_required_artifacts.py  check_secrets.py  fetch_official_data.py  make_dataset.py  profile_datasets.py  run_eda.py  run_outlook.py  validate_data_contracts.py  validate_task_statuses.py
tests/: __init__.py
(+101 files in other folders)
